--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,6 +15,8 @@
         </div>
     </main>
 </body>
+
+<script src="/immutable/immutable.min.js"></script>
 <script src="/client.js"></script>
 
 </html>
